--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 </head>
 <body>
     
-    <h2>add new line</h2>
-    <h3>this is a new line added by monta</h3>
-    <p>this is new paragraph2</p>
-    <h4>neww  line</h4>
-    <p>this is paragraph1</p>
-    <h2>i want to merge this code fl  main branch</h2>
+    <h2>line1</h2>
+  
 </body>
 </html>
