--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <title>scenario2</title>
 </head>
 <body>
-    <h2>add new line</h2>
-    <h3>this is a new line added by monta</h3>
-    <p>this is new paragraph2</p>
-    <h4>neww  line</h4>
-    <p>this is paragraph1</p>
+    <h2>line2</h2>
     <h2>i want to merge this code fl  main branch</h2>
 </body>
 </html>
